# api/org-unit-role.pb.route.go
@@ -45,13 +45,6 @@ func init() {
 	route.Verb = "delete"
 	RoutesOrgUnitRole = append(RoutesOrgUnitRole, route)
 
-	// Adding Route information for RestoreCustomRole RPC
-	route = model.NewRoute("/api/auth/v1/ou/{ou}/custom-roles/{roleName}/restore", "POST")
-	route.Resource = "org-unit-custom-role"
-	route.Scopes = append(route.Scopes, "ou")
-	route.Verb = "update"
-	RoutesOrgUnitRole = append(RoutesOrgUnitRole, route)
-
 	// Adding Route information for ListCustomRoles RPC
 	route = model.NewRoute("/api/auth/v1/ou/{ou}/custom-roles", "GET")
 	route.Resource = "org-unit-custom-role"
